# cck-blog

./: .gitignore  Dockerfile  README.md  blog_helpers.py  blog_list.txt  blog_styles.py  greeting.md  main.py  modal_deploy.py  pyproject.toml
blog/: 00_api_tests.ipynb  01_update_posts.ipynb
blog/002_pytorch_slerp/: pytorch_slerp.ipynb
blog/003_spec_norms/: spec_norms.ipynb
blog/005_llm_prompt_tips/: llm_prompt_tips.ipynb
blog/006_llms_sequence_learners/: llms_sequence_learners.html  llms_sequence_learners.ipynb
blog/007_fine_tune_encoders/: fine_tune_encoders.ipynb  fine_tune_encoders_old.ipynb
blog/007_fine_tune_modernBERT/: fine_tune_modernBERT.ipynb
blog/008_long_late_chunking/: long_late_chunking.ipynb  pyproject.toml
blog/009_llm_agents/: llm_agents.ipynb
blog/010_true_llm_dialogues/: true_llm_dialogues.ipynb
blog/_TEMPLATE/: article.ipynb
blog/fine_tune_modernBERT/: fine_tune_modernBERT.ipynb
blog/llm_agents/: llm_agents.ipynb
blog/llm_prompt_tips/: llm_prompt_tips.ipynb
blog/llms_sequence_learners/: llms_sequence_learners.ipynb
blog/long_late_chunking/: long_late_chunking.ipynb
blog/merge_n_BSTs/: merge_n_BSTs.ipynb
blog/rayleigh_init/: rayleigh_init.ipynb
blog/series/guidance-expts/guidance-expts-2/: guidance-expts-2.ipynb
blog/series/guidance-expts/guidance-expts-3/: guidance-expts-3.ipynb
blog/series/llms-course/00_overview/: 00_overview.ipynb
blog/spec_norms/: spec_norms.ipynb
blog/static/styles/: style.css
blog/true_llm_dialogues/: true_llm_dialogues.ipynb
tests/: run_test.py  test_series.py
(+13 files in other folders)
