[project]
name = "008-long-late-chunking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastcore>=1.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nbdev>=2.4.2",
    "pypdfium2>=4.30.1",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
    "umap-learn>=0.5.7",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
